[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main/Audio/FadingAudioPlayer.gd" type="Script" id=1]

[node name="FadingAudioPlayer" type="AudioStreamPlayer"]
bus = "SFX"
script = ExtResource( 1 )

[node name="TweenOut" type="Tween" parent="."]

[node name="TweenIn" type="Tween" parent="."]
[connection signal="tween_completed" from="TweenOut" to="." method="_on_TweenOut_tween_completed"]
